--- a/scss/_location.scss
+++ b/scss/_location.scss
@@ -20,6 +20,7 @@
 			margin-bottom: 40px;
 			letter-spacing: 1.5px;
 			color: #333;
+			position: relative;
 			
 		}
 		h2 {
@@ -54,8 +55,8 @@
 					color: #111;
 
 					img {
-						width: 50px;
-						height: 50px;
+						width: 42px;
+						height: 42px;
 						margin: 25px auto 10px;
 
 						display: block;
@@ -77,11 +78,14 @@
 			width: 100%;
 			height: 500px;
 			margin-top: 100px;
+			
 		}
 		.branch {
 			width: 100%;
-			text-align: center;
-
+			height: 150px;
+			display: flex;
+			justify-content: space-between;
+			margin-left: 50px;
 			li {
 			
 				width: 380px;
@@ -89,9 +93,8 @@
 				float: left;
 				position: relative;
 				text-align: left;
-				margin-right: 20px;
-				margin-bottom: 70px;
-				margin-top: 40px;
+				margin: 40px -10px 0px;
+				
 
 				&:last-of-type {
 					margin-right: 0px;
