--- a/scss/_gallery.scss
+++ b/scss/_gallery.scss
@@ -106,7 +106,7 @@
 					// box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
 
 					a {
-						display: block;
+						display: inline-block;
 
 						.thumb {
 							width: 300px;
