--- a/scss/_department.scss
+++ b/scss/_department.scss
@@ -21,37 +21,36 @@
 	.inner {
 		width: 1180px;
 		margin: 0 auto;
+		padding: 150px 0;
 		position: relative;
 
-		h1{
-			font: bold 50px/1 'Spartan'; color: #444;
-			text-align: center;
-			margin-bottom: 10%;
-		}
-		.team_name {
-			width: 100%;
-			position: absolute;
-			top: 4%;
-			left: 28%;
-			
-			 
-			li {
-				float: left;
-				padding-right: 20px;
-				margin-right: 20px;
-				border-right: 1px solid #555;
+		// h1{
+		// 	font: bold 50px/1 'STIX Two Text'; color: #444;
+		// 	text-align: center;
+		// 	margin-bottom: 10%;
+		// }
+		// .team_name {
+		// 	width: 100%;
+		// 	position: absolute;
+		// 	top: 4%;
+		// 	left: 28%;
 
-				a {
-					font: bold 18px/1 'Noto Sans KR';
-					color: #222;
+		// 	li {
+		// 		float: left;
+		// 		padding-right: 20px;
+		// 		margin-right: 20px;
+		// 		border-right: 1px solid #555;
 
-				
-				}
-				&:last-child{
-					border-right: none;
-				}
-			}
-		}
+		// 		a {
+		// 			font: bold 18px/1 'STIX Two Text';
+		// 			color: #222;
+
+		// 		}
+		// 		&:last-child{
+		// 			border-right: none;
+		// 		}
+		// 	}
+		// }
 
 		.wrap {
 			width: 100%;
@@ -59,13 +58,12 @@
 			&::before {
 				content: "";
 				display: block;
-				width: 450px;
+				width: 500px;
 				height: 2px;
 				background: #111;
 				position: absolute;
-				top: 7%;
+				top: 3%;
 			}
-
 
 			&::after {
 				content: "";
@@ -75,57 +73,120 @@
 				height: 2px;
 				background: #111;
 				position: absolute;
-				top: 22%;
-				
+				top: 18%;
 			}
-			
 
 			.company {
-				width: 1180px;
+				width: 100%;
 				height: 250px;
-				margin-bottom: 10%;
+				margin-bottom: 15%;
 				position: relative;
-				
-				
-				
-				.main_pic {
-					width: 450px;
-					height: 100%;
-					background: url(../img/members.jpg) no-repeat;
-					background-size: cover; background-position: center;
-					float: left;
 
-				
+				.main_pic {
+					width: 500px;
+					height: 450px;
+					background: url(../img/members.jpg) no-repeat;
+					background-size: cover;
+					background-position: center;
+					float: left;
 				}
 				.txt {
+					text-align: left;
+					display: inline-block;
 					width: 55%;
 					position: absolute;
-					right: 3%;
 					top: 50%;
-					transform: translateY(-50%);
+					left: 50%;
+					margin-left: -25px;
+					margin-top: -60px;
 
 					h2 {
-						font: bold 30px/1 'Noto Sans KR';
+						width: 90%;
+						font: bold 60px/1 "Spartan";
+						border-bottom: 5px solid #111;
+						padding-bottom: 25px;
 						color: #222;
-						margin-bottom: 20px;
-
+						margin-bottom: 45px;
 					}
 					p {
-						font: bold 15px/1.7 'Spartan';
-						color: #555;
-						margin-bottom: 20px;
+						width: 80%;
+						font: 400 20px/1.7 "Spartan";
+						color: #888;
+						margin-bottom: 45px;
 					}
 					a {
 						display: inline-block;
 						text-align: center;
 						border-radius: 5px;
-						width: 250px; height: 50px;
+						width: 280px;
+						height: 60px;
 						background: rgba(216, 216, 216, 0.665);
-						font: 13px/50px 'Spartan'; color: rgb(133, 128, 128);
+						font: 15px/60px "Spartan";
+						color: rgb(133, 128, 128);
 						margin-right: 20px;
 					}
-					
-					
+				}
+			}
+			.help {
+				display: inline-block;
+				padding: 20px 0;
+				width: 100%;
+				height: 100%;
+				margin: 140px auto;
+				text-align: center;
+				position: relative;
+
+				.help_txt {
+					display: inline-block;
+					padding: 70px 0;
+					width: 500px;
+					height: 100%;
+					margin-right: 120px;
+					text-align: left;
+
+					&:last-child {
+						margin-right: 0;
+					}
+
+					h2 {
+						font: bold 35px/1 "Spartan";
+						color: #222;
+						padding-bottom: 30px;
+						border-bottom: 3px solid #222;
+						margin-bottom: 50px;
+
+						.btn_class {
+							width: 100%;
+							position: relative;
+
+							&::before {
+								content: "";
+								display: block;
+								width: 100px;
+								height: 3px;
+								position: absolute;
+								top: 50%;
+								right: -200px;
+								background: #222;
+							}
+							&::after {
+								content: "";
+								width: 25px;
+								height: 25px;
+								border-top: 3px solid #121212;
+								border-right: 3px solid #121212;
+								display: block;
+								transform: rotate(45deg);
+								position: absolute;
+								top: 7px;
+								right: -197px;
+							}
+						}
+					}
+					p {
+						font: bold 20px/1.7 "Spartan";
+						color: #333;
+					}
 				}
 			}
 
@@ -134,144 +195,149 @@
 				width: 100%;
 				text-align: center;
 
-				h1 {
-					font: bold 50px/1 'Noto Sans KR';
+				> h1 {
+					font: bold 50px/1 "Spartan";
 					color: #222;
 					margin-bottom: 55px;
 				}
-				h2 {
-					font: bold 23px/1.5 'Noto Sans KR';
+				> h2 {
+					display: inline-block;
+					width: 70%;
+					font: bold 23px/1.5 "Spartan";
 					color: #666;
 					margin-bottom: 100px;
 				}
 
-				
-				
 				article {
-					width: 260px;
-					height: 350px;
+					width: 350px;
+					height: 450px;
 					border-radius: 7px;
-					margin-right: 46px;
+					margin-right: 65px;
 					background: #fff;
 					margin-bottom: 60px;
 					box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.05);
 					float: left;
 					position: relative;
-					
-					
+
 					.pic {
-						width: 120px;
-						height: 120px;
-						border: 5px solid pink;
+						width: 170px;
+						height: 170px;
+						// border: 7px solid pink;
 						border-radius: 50%;
 						background: rgba(153, 127, 127, 0.405);
-						margin: 30px auto 45px;
+						margin: 40px auto 45px;
 						box-sizing: border-box;
-						box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.05);
+						box-shadow: 2px 10px 10px 5px rgba(0, 0, 0, 0.15);
 						position: relative;
 						overflow: hidden;
 
 						.txt {
-							width: 100%; height: 100%; padding: 20px;
+							width: 100%;
+							height: 100%;
+							padding: 20px;
 							// position: absolute; top: -100%; left: 0px;
 							background-color: rgba(0, 0, 0, 0.7);
-							border-radius: 50%; 
+							border-radius: 50%;
 							transition: 0.5s;
 							opacity: 0;
-							
+
 							text-align: center;
 
 							p {
-								
-								font: bold 18px/1 'STIX Two Text'; color: #fff;
+								font: bold 20px/1 "Spartan";
+								color: #fff;
 								letter-spacing: 1.7px;
 								position: absolute;
-								top: 50%; left: 50%; transform: translate(-50%, -50%);
+								top: 50%;
+								left: 50%;
+								transform: translate(-50%, -50%);
 							}
 						}
 						&:hover .txt {
 							top: 0%;
 							opacity: 1;
 						}
-
 					}
-					&:nth-of-type(1) .pic{
+					&:nth-of-type(1) .pic {
 						background-image: url("../img/mem01.jpg");
 						background-size: cover;
 						background-position: center;
-						
 					}
-					&:nth-of-type(2) .pic{
+					&:nth-of-type(2) .pic {
 						background-image: url("../img/mem02.jpg");
 						background-size: cover;
 						background-position: center;
 					}
-					&:nth-of-type(3) .pic{
+					&:nth-of-type(3) .pic {
 						background-image: url("../img/mem03.jpg");
 						background-size: cover;
 						background-position: center;
 					}
-					&:nth-of-type(4) .pic{
+					&:nth-of-type(4) .pic {
 						background-image: url("../img/mem04.jpg");
 						background-size: cover;
 						background-position: center;
 					}
-					&:nth-of-type(5) .pic{
+					&:nth-of-type(5) .pic {
 						background-image: url("../img/mem05.jpg");
 						background-size: cover;
 						background-position: center;
 					}
-					&:nth-of-type(6) .pic{
+					&:nth-of-type(6) .pic {
 						background-image: url("../img/mem06.jpg");
 						background-size: cover;
 						background-position: center;
 					}
-					&:nth-of-type(7) .pic{
+					&:nth-of-type(7) .pic {
 						background-image: url("../img/mem07.jpg");
 						background-size: cover;
 						background-position: center;
 					}
-					&:nth-of-type(8) .pic{
+					&:nth-of-type(8) .pic {
 						background-image: url("../img/mem08.jpg");
 						background-size: cover;
 						background-position: center;
 					}
-					&:nth-of-type(9) .pic{
+					&:nth-of-type(9) .pic {
 						background-image: url("../img/mem09.jpg");
 						background-size: cover;
 						background-position: center;
 					}
-					&:nth-of-type(10) .pic{
+					&:nth-of-type(10) .pic {
 						background-image: url("../img/mem10.jpg");
 						background-size: cover;
 						background-position: center;
 					}
-					&:nth-of-type(11) .pic{
+					&:nth-of-type(11) .pic {
 						background-image: url("../img/mem11.jpg");
 						background-size: cover;
 						background-position: center;
 					}
-					&:nth-of-type(12) .pic{
+					&:nth-of-type(12) .pic {
 						background-image: url("../img/mem12.jpg");
 						background-size: cover;
 						background-position: center;
 					}
-					>h3 {
-						font: bold 17px/1 'Spartan';
+					> h3 {
+						font: bold 22px/1 "Spartan";
 						color: #222;
-						margin-bottom: 10px;
+						margin-bottom: 15px;
 					}
-					>p {
-						font:bold 13px/1.5 'Spartan';
-						color: #999; margin-bottom: 30px;
+					> p {
+						font: bold 17px/1.5 "Spartan";
+						color: #999;
+						margin-bottom: 30px;
 					}
-					>a{
+					> a {
 						display: inline-block;
-						width: 40px; height: 40px;
-						background :rgba(216, 216, 216, 0.665);
+						width: 50px;
+						height: 50px;
+						background: rgba(216, 216, 216, 0.665);
 						border-radius: 10px;
+						margin-right: 5px;
 						text-align: center;
-						line-height: 40px;
+						font-size: 20px;
+						line-height: 50px;
 						color: rgb(133, 128, 128);
 						transition: 1s;
 
@@ -279,14 +345,12 @@
 							color: #fff;
 						}
 					}
-					
-					
-					&:nth-of-type(4n+0){
+
+					&:nth-of-type(3n + 0) {
 						margin-right: 0;
 					}
 				}
 			}
-
 		}
 	}
 }
