--- a/css/style.css
+++ b/css/style.css
@@ -1427,12 +1427,12 @@ fieldset {
             top: 55px;
             right: 5%; }
             .gallery .inner #gallery_page ul li > div .gallery_txt p {
-              font: bold 25px/1 "Spartan";
+              font: bold 23px/1 "Spartan";
               color: #222;
               margin-bottom: 20px; }
             .gallery .inner #gallery_page ul li > div .gallery_txt span {
               width: 100%;
-              font: 17px/1.6 "Spartan";
+              font: 15px/1.6 "Spartan";
               color: #888; }
           .gallery .inner #gallery_page ul li > div .btn::before {
             content: "";
@@ -1476,14 +1476,26 @@ fieldset {
     right: 20px;
     cursor: pointer; }
 
+@media screen and (max-width: 1179px) {
+  .gallery .inner #gallery_page ul li > div {
+    width: 100%; }
+    .gallery .inner #gallery_page ul li > div .thumb {
+      width: 200px;
+      height: 100px; }
+    .gallery .inner #gallery_page ul li > div .gallery_txt {
+      width: 20%; }
+      .gallery .inner #gallery_page ul li > div .gallery_txt p {
+        font: bold 15px/1; }
+      .gallery .inner #gallery_page ul li > div .gallery_txt span {
+        font: 11px/1; } }
 @media screen and (max-width: 999px) {
-  .content .inner #gallery ul li {
+  .gallery .inner #gallery_page ul li {
     width: 33.333%; } }
 @media screen and (max-width: 599px) {
-  .content .inner #gallery ul li {
+  .gallery .inner #gallery_page ul li {
     width: 50%; } }
 @media screen and (max-width: 499px) {
-  .content .inner #gallery ul li {
+  .gallery .inner #gallery_page ul li {
     width: 100%; } }
 /*
 "Spartan"
