--- a/scss/_community.scss
+++ b/scss/_community.scss
@@ -7,6 +7,7 @@
 */
 
 .community {
+	// background: #fff;
 	.sub_visual {
 		background: url(../img/came2.jpg);
 		background-size: cover;
@@ -17,11 +18,11 @@
 
 		>h1 {
 			text-align: center;
-			font: bold 30px/1 "Noto Sans KR";
+			font: 400 40px/1 "Spartan";
 			letter-spacing: 1.5px;
 			color: #fff;
-			padding-top: 40px;
-			margin-bottom: 30px;
+			padding-top: 63px;
+			margin-bottom: 11px;
 		}
 		.coummity_search {
 			display: inline-block;
@@ -29,12 +30,13 @@
 			margin-top: 20px;
 			text-align: center;
 			position: absolute;
-			left: -3%;
+			left: -5%;
 
 			label {
-				font: 500 20px/1.5 "Noto Sans KR";
+				font: bold 25px/1.5 "Noto Sans KR";
 				color: #fff;
 				margin-right: 20px;
+				letter-spacing: 1.5px;
 
 				i {
 					font-size: 25px;
@@ -43,7 +45,7 @@
 			}
 			input[type="text"] {
 				width: 600px;
-				height: 50px;
+				height: 60px;
 				padding-left: 30px;
 				font: 17px/1 "Noto Sans KR";
 				letter-spacing: 1.5px;
